changes to fields in share image

--- a/app/views/orbiturer_share_images/_form.html.erb
+++ b/app/views/orbiturer_share_images/_form.html.erb
@@ -29,16 +29,16 @@
   </p>
   </div>
   <div class="field">
-    <% f.label :orbituarysite_id %><br />
+    <%# f.label :orbituarysite_id %><br />
     <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%# f.label :title %>
+    <%# f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description, :rows => 3 %>
+    <%# f.label :description %>
+    <%# f.text_area :description, :rows => 3 %>
   </div>
   <div class="actions">
     <%= f.submit %>
