--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -246,12 +246,12 @@
             <% @orbituarysite.orbiturer_share_images.each do |f| %> 
               <div class="span5 margin">
               <div class="span4">
-                  <%# link_to image_tag(f.orbiturer_other_images_url(:thumb)), f.orbiturer_other_images_url, :data => { :colorbox => true, :id => f.id } %>
+                  <%= link_to image_tag(f.orbiturer_other_images_url(:thumb)), f.orbiturer_other_images_url, :data => { :colorbox => true, :id => f.id } %>
                 </div>
                 <div class="span7">
-                  <b><%= f.title %></b><br />
+                  <b><%# f.title %></b><br />
                   <span class="line-break">
-                    <%= f.description %>
+                    <%# f.description %>
                   </span>
                 </div>
               </div>
