--- a/app/views/orbiturer_share_images/_form.html.erb
+++ b/app/views/orbiturer_share_images/_form.html.erb
@@ -30,7 +30,7 @@
   </div>
   <div class="field">
     <%# f.label :orbituarysite_id %><br />
-    <%= f.hidden_field :orbituarysite_id %>
+    <%= f.number_field :orbituarysite_id %>
   </div>
   <div class="field">
     <%# f.label :title %>
