--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container-fluid container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -57,7 +57,11 @@
             <div class="container-fluid nav-collapse">
               <ul class="nav">
                 <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
-                  <a data-toggle="modal" href="#myModal6" href="/condolences/new"><button class="btn btn-default">Create Orbituary site</button></a>
+                  <% if user_signed_in? %>                
+                    <%= link_to "Create Orbituary Site", '/orbituarysites/new', :class => "btn btn-default" %>
+                  <% else %>
+                    <a data-toggle="modal" href="#myModal6" href="/condolences/new"><button class="btn btn-default">Create Orbituary site</button></a>
+                  <% end %>
                 </li>
               </ul>
             <div class="modal fade hide" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -68,16 +72,12 @@
                     <h4 class="modal-title">Please Sign in</h4>
                   </div>
                   <div class="modal-body">
-                    <% if user_signed_in? %>
-                      <%= render 'orbituarysites/form' , :remote => true %>
-                    <% else %>
                       <div class="span3 social_button">
                         <p><strong>Please sign in to to create a new site</p></strong>
                         <p><%= link_to raw("<i class=\"icon-facebook\"> | Sign in with Facebook</i>"), user_omniauth_authorize_path(:facebook),:class => "btn btn-facebook"%></p>
                         <p><%= link_to raw("<i class=\"icon-twitter\"> | Sign in with Twitter</i>"), user_omniauth_authorize_path(:twitter),:class => "btn btn-twitter"%></p>
                         <p><%= link_to raw("<i class=\"icon-google-plus\"> | Sign in with Google</i>"), user_omniauth_authorize_path(:google_oauth2),:class => "btn btn-google-plus" %></p>
                       </div>
-                      <% end %>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
@@ -98,7 +98,7 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid container">
       <div class="row-fluid">
 
           <%= bootstrap_flash %>
