changes to all forms and notice display

--- a/app/views/condolences/_form.html.erb
+++ b/app/views/condolences/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :share_content %><br />
-    <%= f.cktext_area :share_content, :ckeditor => {:language => "en"} %>
+    <%= f.cktext_area :share_content, :ckeditor => {:language => "en", :toolbar => "mini" } %>
   </div>
   <div class="field">
     <% f.label :orbituarysite_id %><br />
