--- a/app/views/histories/_form.html.erb
+++ b/app/views/histories/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.cktext_area :body, :ckeditor => {:language => "en"} %>
+    <%= f.cktext_area :body, :ckeditor => {:language => "en", :toolbar => "mini"} %>
   </div>
   <div class="field">
     <% f.label :orbituarysite_id %><br />
