--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#"><%= image_tag('ninaivu_logo.png') %></a>
+          <a class="brand" href="http://localhost:3000"><%= image_tag('ninaivu_logo.png') %></a>
             <div class="container-fluid nav-collapse">
               <ul class="nav">
                 <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
@@ -89,8 +89,8 @@
 
             <%= menu_group :pull => :right do %>
         <% if user_signed_in? %>
-            <%= link_to('Logout', destroy_user_session_path) %>        
-
+          <%= link_to('Account', home_account_path)%>
+          <%= link_to('Logout', destroy_user_session_path) %>        
         <% end %>
     <% end %>
               </div><!--/.nav-collapse -->
