--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.cktext_area :body, :ckeditor => {:language => "en"} %>
+    <%= f.cktext_area :body, :ckeditor => {:language => "en", :toolbar => "mini"} %>
   </div>
   <div class="field">
     <% f.label :orbituarysite_id %><br />
