button changed in all form

--- a/app/views/condolences/_form.html.erb
+++ b/app/views/condolences/_form.html.erb
@@ -40,6 +40,6 @@
     <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Condolences", :class => "btn btn-primary" %>
   </div>
 <% end %>
