--- a/app/views/histories/_form.html.erb
+++ b/app/views/histories/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create History", :class => "btn btn-primary" %>
   </div>
 <% end %>
