--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Share Memories", :class => "btn btn-primary" %>
   </div>
 <% end %>
