--- a/app/views/orbiturer_share_images/_form.html.erb
+++ b/app/views/orbiturer_share_images/_form.html.erb
@@ -30,17 +30,17 @@
   </div>
   <div class="field">
     <%# f.label :orbituarysite_id %><br />
-    <%= f.number_field :orbituarysite_id %>
+    <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="field">
-    <%# f.label :title %>
-    <%# f.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%# f.label :description %>
-    <%# f.text_area :description, :rows => 3 %>
+    <%= f.label :description %>
+    <%= f.cktext_area :description, :rows => 3, :ckeditor => {:language => "en", :toolbar => "mini"} %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Share Images", :class => "btn btn-primary" %>
   </div>
 <% end %>
