--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -129,3 +129,18 @@ background-color: #01538d \9;
   margin-left: 20px;
 }
   
+.color_white {
+  color: white !important;
+}
+
+.color_black {
+  color: black !important;
+}
+
+.btn-primary {
+  color: white !important;
+}
+
+.btn-danger {
+  color: white !important;
+}
