--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,12 +87,12 @@
             </div><!-- /.modal -->
 
 
-            <%= menu_group :pull => :right do %>
-        <% if user_signed_in? %>
-          <%= link_to('Account', home_account_path)%>
-          <%= link_to('Logout', destroy_user_session_path) %>        
+        <%= menu_group :pull => :right do %>
+          <% if user_signed_in? %>
+            <%= link_to 'Account', home_account_path, :class => "btn btn-default color_black" %>
+            <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default color_black" %>        
+          <% end %>
         <% end %>
-    <% end %>
               </div><!--/.nav-collapse -->
             </div>
       </div>
