--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -39,10 +39,14 @@
   <%= @orbituarysite.death_place %>
 </h4>
 <p>
-<%= link_to 'Edit', edit_orbituarysite_path(@orbituarysite) %> |
-<%= link_to 'Back', orbituarysites_path %>
+<% if user_signed_in? %>
+  <% if current_user.id == @orbituarysite.user_id %>
+    <%= link_to 'Edit', edit_orbituarysite_path(@orbituarysite), :class => "btn btn-default pull-right color_black" %> 
+    <%= link_to 'Destroy', @orbituarysite, :class => "btn btn-danger pull-right color_white", method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+<% end %>
 </p>
-
+<br />
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://localhost:3000/orbituarysites/1" data-text=<%= @orbituarysite.name %> data-via="anbublacky">Tweet</a>
 <script>/*!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');*/</script>
 
@@ -77,7 +81,7 @@
     
     <% if @orbituarysite.notice_displays.count > 0 %>
       <div class="well">          
-        <h5>மரண அறிவித்தல்</h5>
+        <h5><center>மரண அறிவித்தல் </center></h5>
         <% @orbituarysite.notice_displays.each do |f| %>
           <%= raw(f.message) %>
                     தகவல்:
