removed unwanted alert

--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -1,5 +1,4 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-<p id="notice"><%= notice %></p>
 <div class="span12">
   <div class="span5 notice">
     <h3 class="center">அமரர்</h3>
@@ -247,6 +246,10 @@
           <% @orbituarysite.memories.each do |f| %>
             <% if f.body? %>
               <h2>Memory shared by <%= f.user.name %></h2>
+              <% if f.user.id == current_user.id %>
+                <%= link_to 'Edit', edit_memory_path(f) %>
+                <%= link_to 'Destroy', f, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
             <% end %>
               <%= raw(f.body) %>
           <% end %>
@@ -283,6 +286,10 @@
       <div class="well">
         <% @orbituarysite.condolences.each do |f| %>
           <% if f.name? %>
+            <% if f.user.id == current_user.id %>
+              <%= link_to 'Edit', edit_condolence_path(f) %>
+              <%= link_to 'Destroy', f, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% end %>
             <P>Condolence by <%= f.name %></p>
             <% if f.flower == 1 %>
               <%= image_tag('flower1.png') %>
