--- a/app/views/condolences/_form.html.erb
+++ b/app/views/condolences/_form.html.erb
@@ -39,6 +39,12 @@
     <% f.label :orbituarysite_id %><br />
     <%= f.hidden_field :orbituarysite_id %>
   </div>
+  <div class="field">
+    <% f.label :user_id %><br />
+    <% if user_signed_in? %>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
+    <% end %>
+  </div>
   <div class="actions">
     <%= f.submit "Condolences", :class => "btn btn-primary" %>
   </div>
